--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		    <br>
 			<a href="https://wordreference.com/">WordReference</a>
 			<br>
-			<a href="http://context.reverso.net/">Reverso</a>
+			<a href="https://context.reverso.net/">Reverso</a>
 			<br>
 			<a href="https://dizionario.reverso.net/francese-italiano">Dizionario FR</a>
 			<br>
@@ -32,10 +32,10 @@
 		</div>	
 		
 		<div class="box">	
-		<span class="caption"><i class="material-icons md-48">star</i></span><br><br>	
+		<span class="caption"><a href="#" class="material-icons md-48 quickstart hvr-buzz">star</a></span><br><br>	
 			<a href="https://youtube.com/">Youtube</a>
 			<br>
-			<a href="https://spotify.com/">Spotify</a>
+			<a href="https://deezer.com/">Deezer</a>
 			<br>
 			<a href="https://www.netflix.com/">Netflix</a>
 			<br>
@@ -80,7 +80,12 @@
 	
 	<script>
 	    $(function() { // On DOM content ready
-            var urls = [];
+            var urls = [
+            	"https://gmail.com/",
+            	"https://wordreference.com/",
+            	"https://context.reverso.net/",
+            	"https://fileshare.cinedubbing.com/"
+            ];
 
             $('.quickstart').click(function() {
                 for (var i in urls) {
@@ -88,6 +93,41 @@
                 }
             });
         });
+	</script>
+
+	<script>
+		var d = new Date();
+		if ((d.getMonth() == 11 && d.getDate() >= 1) || (d.getMonth() == 0 && d.getDate() <= 6)) {
+			console.log('Merry Christmas!')
+			document.body.style.backgroundImage = "url('images/wall_xmas.jpg')";
+			document.body.innerHTML += `
+			<style>
+				/* Enable for Christmas */
+				/* customizable snowflake styling */
+				.snowflake {
+				  color: #fff;
+				  font-size: 1em;
+				  font-family: sans-serif !important;
+				  text-shadow: 0 0 1px #000;
+				}
+
+				@-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%{-webkit-transform:translateX(0px);transform:translateX(0px)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}100%{-webkit-transform:translateX(0px);transform:translateX(0px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%{transform:translateX(0px)}50%{transform:translateX(80px)}100%{transform:translateX(0px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}
+			</style>
+			<div class="snowflakes" aria-hidden="true">
+				<div class="snowflake">&#10052;</div>
+				<div class="snowflake">&#10053;</div>
+				<div class="snowflake">&#10054;</div>
+				<div class="snowflake">&#10052;</div>
+				<div class="snowflake">&#10053;</div>
+				<div class="snowflake">&#10054;</div>
+				<div class="snowflake">&#10052;</div>
+				<div class="snowflake">&#10053;</div>
+				<div class="snowflake">&#10054;</div>
+				<div class="snowflake">&#10052;</div>
+			</div>`;
+		} else {
+			console.log('Not Christmas :)')
+		}
 	</script>
 
 </body>
