--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 			<br>
 			<a href="https://context.reverso.net/">Reverso</a>
 			<br>
+			<a href="https://https://synonyms.reverso.net/">Reverso Syn.</a>
+			<br>
 			<a href="https://dizionario.reverso.net/francese-italiano">Dizionario FR</a>
 			<br>
 			<a href="https://www.linkedin.com/">LinkedIn</a>
@@ -72,6 +74,11 @@
 			<a href="https://asos.com/it/">Asos</a>
 			<br>
 			<a href="https://www2.hm.com/it_ch/donna.html">H&M</a>
+		</div>
+
+		<div class="box">
+		<span class="caption"><i class="material-icons md-48">file_download</i></span><br><br>
+			<a href="https://bitsearch.to/">BitSearch</a>
 		</div>
 
 		<br><br><br>
