--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <br>
             <a class="hvr-neon" href="https://context.reverso.net/">Reverso</a>
             <br>
-            <a class="hvr-neon" href="https://https://synonyms.reverso.net/">Reverso Syn.</a>
+            <a class="hvr-neon" href="https://synonyms.reverso.net/">Reverso Syn.</a>
             <br>
             <a class="hvr-neon" href="https://dizionario.reverso.net/francese-italiano">Dizionario FR</a>
             <br>
