Remove dependency on JQuery and format code.

--- a/index.html
+++ b/index.html
@@ -1,167 +1,172 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	<title>Start</title>
-	<link href="favicon.ico" rel="icon">
-	<link rel="stylesheet" id="pagestyle" type="text/css" href="css/startpage_custom.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
-	<style type="text/css"></style>
-	<script
-      src="https://code.jquery.com/jquery-3.2.1.min.js"
-      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-      crossorigin="anonymous"></script>
-</head>
-<body>
-	<div class="row">	
-		<div class="column">
-		<span class="icon"><a href="#" class="material-icons md-48 quickstart hvr-buzz hvr-neon">work</a></span><br><br>
-            <a class="hvr-neon" href="https://gmail.com/">Gmail</a>
-            <br>
-            <a class="hvr-neon" href="https://hotmail.com/">Hotmail</a>
-            <br>
-            <a class="hvr-neon" href="https://wetransfer.com/">WeTransfer</a>
-            <br>
-            <a class="hvr-neon" href="https://wordreference.com/">WordReference</a>
-            <br>
-            <a class="hvr-neon" href="https://context.reverso.net/">Reverso</a>
-            <br>
-            <a class="hvr-neon" href="https://synonyms.reverso.net/">Reverso Syn.</a>
-            <br>
-            <a class="hvr-neon" href="https://dizionario.reverso.net/francese-italiano">Dizionario FR</a>
-            <br>
-            <a class="hvr-neon" href="https://www.linkedin.com/">LinkedIn</a>
-		</div>	
-		
-		<div class="column">	
-		<span class="icon"><i class="material-icons md-48">star</i></span><br><br>
-            <a class="hvr-neon" href="https://youtube.com/">Youtube</a>
-            <br>
-            <a class="hvr-neon" href="https://deezer.com/">Deezer</a>
-            <br>
-            <a class="hvr-neon" href="https://www.netflix.com/">Netflix</a>
-            <br>
-            <a class="hvr-neon" href="https://www.pinterest.com/">Pinterest</a>
-            <br>
-            <a class="hvr-neon" href="https://giallozafferano.it/">GialloZafferano</a>
-		</div>	
-		
-		<div class="column">	
-		<span class="icon"><i class="material-icons md-48">people</i></span><br><br>
-            <a class="hvr-neon" href="https://instagram.com/">Instagram</a>
-            <br>
-            <a class="hvr-neon" href="https://facebook.com/">Facebook</a>
-            <br>
-            <a class="hvr-neon" href="https://web.telegram.org/">Telegram</a>
-            <br>
-            <a class="hvr-neon" href="https://web.whatsapp.com/">Whatsapp</a>
-		</div>
-		
-		<div class="column">
-		<span class="icon"><i class="material-icons md-48">shopping_cart</i></span><br><br>
-            <a class="hvr-neon" href="https://amazon.it/">Amazon</a>
-            <br>
-            <a class="hvr-neon" href="https://zara.it/">Zara</a>
-            <br>
-            <a class="hvr-neon" href="https://pullandbear.it/">Pull&Bear</a>
-            <br>
-            <a class="hvr-neon" href="https://bershka.it/">Bershka</a>
-            <br>
-            <a class="hvr-neon" href="https://oysho.com/it/">Oysho</a>
-            <br>
-            <a class="hvr-neon" href="https://stradivarius.com/it/">Stradivarius</a>
-            <br>
-            <a class="hvr-neon" href="https://asos.com/it/">Asos</a>
-            <br>
-            <a class="hvr-neon" href="https://www2.hm.com/it_ch/donna.html">H&M</a>		
-		</div>
-		
-		<div class="column">	
-		<span class="icon"><i class="material-icons md-48">file_download</i></span><br><br>
-			<a class="hvr-neon" href="https://bitsearch.to/">BitSearch</a>
-		</div>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+    <title>Start</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="favicon.ico" rel="icon" />
+    <link rel="stylesheet" id="pagestyle" type="text/css" href="css/startpage_custom.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="row">
+      <div class="column">
+        <span class="icon"
+          ><a href="#" class="material-icons md-48 quickstart hvr-buzz hvr-neon">work</a></span
+        ><br /><br />
+        <a class="hvr-neon" href="https://gmail.com/">Gmail</a>
+        <br />
+        <a class="hvr-neon" href="https://hotmail.com/">Hotmail</a>
+        <br />
+        <a class="hvr-neon" href="https://wetransfer.com/">WeTransfer</a>
+        <br />
+        <a class="hvr-neon" href="https://wordreference.com/">WordReference</a>
+        <br />
+        <a class="hvr-neon" href="https://context.reverso.net/">Reverso</a>
+        <br />
+        <a class="hvr-neon" href="https://synonyms.reverso.net/">Reverso Syn.</a>
+        <br />
+        <a class="hvr-neon" href="https://dizionario.reverso.net/francese-italiano"
+          >Dizionario FR</a
+        >
+        <br />
+        <a class="hvr-neon" href="https://www.linkedin.com/">LinkedIn</a>
+      </div>
 
-		<br><br>
-		<span class="hvr-neon">
-			<span id="countdown"></span>
-		</span>
+      <div class="column">
+        <span class="icon"><i class="material-icons md-48">star</i></span
+        ><br /><br />
+        <a class="hvr-neon" href="https://youtube.com/">Youtube</a>
+        <br />
+        <a class="hvr-neon" href="https://deezer.com/">Deezer</a>
+        <br />
+        <a class="hvr-neon" href="https://www.netflix.com/">Netflix</a>
+        <br />
+        <a class="hvr-neon" href="https://www.pinterest.com/">Pinterest</a>
+        <br />
+        <a class="hvr-neon" href="https://giallozafferano.it/">GialloZafferano</a>
+      </div>
 
+      <div class="column">
+        <span class="icon"><i class="material-icons md-48">people</i></span
+        ><br /><br />
+        <a class="hvr-neon" href="https://instagram.com/">Instagram</a>
+        <br />
+        <a class="hvr-neon" href="https://facebook.com/">Facebook</a>
+        <br />
+        <a class="hvr-neon" href="https://web.telegram.org/">Telegram</a>
+        <br />
+        <a class="hvr-neon" href="https://web.whatsapp.com/">Whatsapp</a>
+      </div>
 
-		<br><br>
-		<input id="searchbox" type="search" placeholder="Search..." onkeydown="if (event.keyCode == 13 || event.which == 13) { window.open('http://google.com/search?q=' + encodeURIComponent(document.getElementById('searchbox').value));}" />
+      <div class="column">
+        <span class="icon"><i class="material-icons md-48">shopping_cart</i></span
+        ><br /><br />
+        <a class="hvr-neon" href="https://amazon.it/">Amazon</a>
+        <br />
+        <a class="hvr-neon" href="https://zara.it/">Zara</a>
+        <br />
+        <a class="hvr-neon" href="https://pullandbear.it/">Pull&Bear</a>
+        <br />
+        <a class="hvr-neon" href="https://bershka.it/">Bershka</a>
+        <br />
+        <a class="hvr-neon" href="https://oysho.com/it/">Oysho</a>
+        <br />
+        <a class="hvr-neon" href="https://stradivarius.com/it/">Stradivarius</a>
+        <br />
+        <a class="hvr-neon" href="https://asos.com/it/">Asos</a>
+        <br />
+        <a class="hvr-neon" href="https://www2.hm.com/it_ch/donna.html">H&M</a>
+      </div>
 
-	</div>	
+      <div class="column">
+        <span class="icon"><i class="material-icons md-48">file_download</i></span
+        ><br /><br />
+        <a class="hvr-neon" href="https://bitsearch.to/">BitSearch</a>
+      </div>
 
-	<script type="text/javascript">
-		// Year progress
-		let now = new Date();
-		let onejan = new Date(now.getFullYear(), 0, 1);
-		let day = Math.ceil(((now.getTime() - onejan.getTime()) / 86400000));
-		let prog = 100 * day / 365
+      <br /><br />
+      <span class="hvr-neon">
+        <span id="countdown"></span>
+      </span>
 
-		// Print percentage
-		document.getElementById('prog').innerText = prog.toFixed(2);
+      <br /><br />
+      <input
+        id="searchbox"
+        type="search"
+        placeholder="Search..."
+        onkeydown="if (event.keyCode == 13 || event.which == 13) { window.open('http://google.com/search?q=' + encodeURIComponent(document.getElementById('searchbox').value));}" />
+    </div>
 
-		// Print progress bar
-		let progbarLen = 20;
-		for (n = 0; n < progbarLen; n++) {
-	    if ((n + 1) * 100 / progbarLen > prog) {
-	    	$('#ascii-progress-bar').append("-");
-	    }
-	    else {
-	    	$('#ascii-progress-bar').append("#"); 
-	    }    
-		}
-	</script>
+    <script type="text/javascript">
+      // Year progress
+      let now = new Date();
+      let onejan = new Date(now.getFullYear(), 0, 1);
+      let day = Math.ceil((now.getTime() - onejan.getTime()) / 86400000);
+      let prog = (100 * day) / 365;
 
-	<script>
-		// Countdown
-		var countDownDate = new Date("May 25, 2024 00:00:00").getTime();
+      // Print percentage
+      document.getElementById("prog").innerText = prog.toFixed(2);
 
-		function countdDown() {
-		  var now = new Date().getTime();
-		  var distance = Math.abs(countDownDate - now);
-		  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-		  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-		  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-		  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+      // Print progress bar
+      let progbarLen = 20;
+      let progressBar = document.getElementById("ascii-progress-bar");
 
-		  document.getElementById("countdown").innerHTML = days + "d " + hours + "h "
-		  + minutes + "m " + seconds + "s ";
-		}
+      for (let n = 0; n < progbarLen; n++) {
+        let char = ((n + 1) * 100) / progbarLen > prog ? "-" : "#";
+        progressBar.appendChild(document.createTextNode(char));
+      }
+    </script>
 
-		// Start counting as soon as page loads
-		countdDown();
+    <script>
+      // Countdown
+      var countDownDate = new Date("May 25, 2024 00:00:00").getTime();
 
-		// Update the count down every 1 second
-		var x = setInterval(countdDown, 1000);
-	</script>
-	
-	<script>
-		// Quickstart link for icon
-	    $(function() { // On DOM content ready
-            var urls = [
-            	"https://gmail.com/",
-            	"https://wordreference.com/",
-            	"https://context.reverso.net/",
-            	"https://fileshare.cinedubbing.com/"
-            ];
+      function countdDown() {
+        var now = new Date().getTime();
+        var distance = Math.abs(countDownDate - now);
+        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-            $('.quickstart').click(function() {
-                for (var i in urls) {
-                    window.open(urls[i]);
-                }
+        document.getElementById("countdown").innerHTML =
+          days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
+      }
+
+      // Start counting as soon as page loads
+      countdDown();
+
+      // Update the count down every 1 second
+      var x = setInterval(countdDown, 1000);
+    </script>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        var urls = [
+          "https://gmail.com/",
+          "https://wordreference.com/",
+          "https://context.reverso.net/",
+          "https://fileshare.cinedubbing.com/",
+        ];
+
+        document.querySelectorAll(".quickstart").forEach(function (button) {
+          button.addEventListener("click", function () {
+            urls.forEach(function (url) {
+              window.open(url);
             });
+          });
         });
-	</script>
+      });
+    </script>
 
-	<script>
-		// Christmas Easter egg
-		var d = new Date();
-		if ((d.getMonth() == 11 && d.getDate() >= 1) || (d.getMonth() == 0 && d.getDate() <= 6)) {
-			console.log('Merry Christmas!')
-			document.body.style.backgroundImage = "url('images/wall_xmas.jpg')";
-			document.body.innerHTML += `
+    <script>
+      // Christmas Easter egg
+      var d = new Date();
+      if ((d.getMonth() == 11 && d.getDate() >= 1) || (d.getMonth() == 0 && d.getDate() <= 6)) {
+        console.log("Merry Christmas!");
+        document.body.style.backgroundImage = "url('images/wall_xmas.jpg')";
+        document.body.innerHTML += `
 			<style>
 				/* Enable for Christmas */
 				/* customizable snowflake styling */
@@ -186,10 +191,9 @@
 				<div class="snowflake">&#10054;</div>
 				<div class="snowflake">&#10052;</div>
 			</div>`;
-		} else {
-			console.log('Not Christmas :)')
-		}
-	</script>
-</body>
+      } else {
+        console.log("Not Christmas :)");
+      }
+    </script>
+  </body>
 </html>
-
